# RISCV-Simulator

./: Analyzer.hpp  CMakeLists.txt  COMMON.h  Instruction.hpp  Memory.hpp  PCounter.hpp  Predictor.hpp  README.md  Register.hpp  Thread.cpp  Thread.h  main.cpp
Pipeline/: EX.cpp  EX.h  ID.cpp  ID.h  IF.cpp  IF.h  MEM.cpp  MEM.h  WB.cpp  WB.h
